<!-- justin chipman n01598472 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/background_light"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/jusstudentIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/n01598472"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/justemperatureUnitRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/juscelsiusRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:checked="true" />

        <RadioButton
            android:id="@+id/jusfahrenheitRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit" />
    </RadioGroup>

    <Spinner
        android:id="@+id/juscitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/jusweatherInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/juslatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat_dash" />

    <TextView
        android:id="@+id/juslonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lon_dash" />

    <TextView
        android:id="@+id/jushumidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_dash" />

    <TextView
        android:id="@+id/juscountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_dash" />

    <TextView
        android:id="@+id/juscityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_dash" />

    <TextView
        android:id="@+id/jusdescTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_dash" />
</LinearLayout>
