<!-- Justin Chipman n01598472 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CBC3E3"
    android:padding="16dp">

    <TextView
        android:id="@+id/jusTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/justin_chipman_n01598472"
        android:textSize="24sp"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/jusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image" />

    <Spinner
        android:id="@+id/jusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/jusDownloadButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/download_image"
        android:layout_gravity="center_horizontal"/>

    <ProgressBar
        android:id="@+id/jusDownloadProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/jusDLPhotoImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
